Fix bug: 18574 - added position adjustment on floated label in list group item to fix vertical alignment issue

--- a/scss/_labels.scss
+++ b/scss/_labels.scss
@@ -27,6 +27,17 @@
   top: -1px;
 }
 
+// Fix vertical alignment on floated labels in list group item
+@each $breakpoint in map-keys($grid-breakpoints) {
+  @include media-breakpoint-up($breakpoint) {
+    .list-group-item .label.pull-#{$breakpoint}-left,
+    .list-group-item .label.pull-#{$breakpoint}-right {
+        position: relative;
+        top: #{(($line-height / .75) - 1 - .5) / 2}em;
+    }
+  }
+}
+
 // Add hover effects, but only for links
 a.label {
   @include hover-focus {
